# dynamic_buffer

./: CMakeLists.txt  README.md
include/boost/beast/: beast_v2_dynamic_buffer_model.hpp  circular_storage.hpp  flat_storage.hpp  is_beast_v2_dynamic_buffer.hpp  multi_buffer_dynamic_proxy.hpp  multi_storage.hpp  static_storage.hpp
src/: config.hpp  explain.hpp  main.cpp  test_read_write.cpp
